News
====

.. contents::

svn trunk
---------

* Set ``if_missing=()`` on ``validators.Set``, as a missing value
  usually means empty for this value.

0.7
---

* **Backward compatibility issue**: Due to the addition of i18n
  (internationalization) to FormEncode, Invalid exceptions now have
  unicode messages.  You may encounter unicode-related errors if you
  are mixing these messages with non-ASCII ``str`` strings.

* gettext-enabled branch merged in

* Fixes `#1457145: Fails on URLs with port numbers
  <http://sourceforge.net/tracker/index.php?func=detail&aid=1457145&group_id=91231&atid=596416>`_

* Fixes `#1559918 Schema fails to accept unicode errors
  <http://sourceforge.net/tracker/index.php?func=detail&aid=1559918&group_id=91231&atid=596416>`_

* ``from formencode.validators import *`` will import the ``Invalid``
  exception now.

* ``Invalid().unpack_errors(encode_variables=True)`` now filters out
  None values (which ``ForEach`` can produce even for keys with no
  errors).

0.6
---

* ``String(min=1)`` implies ``not_empty`` (which seems more intuitive)

* Added ``list_char`` and ``dict_char`` arguments to
  ``Invalid.unpack_errors`` (passed through to ``variable_encode``)

* Added a ``use_datetime`` option to ``TimeValidator``, which will
  cause it to use ``datetime.time`` objects instead of tuples.  It was
  previously able to consume but not produce these objects.

* Added ``<form:iferror name="not field_name">`` when you want to
  include text only when a field has no errors.

* There was a problem installing 0.5.1 on Windows with Python 2.5, now
  resolved.

0.5.1
-----

* Fixed compound validators and ``not_empty`` (was breaking
  SQLObject's PickleCol)

0.5
---

* Added ``htmlfill.default_formatter_dict``, and you can poke new
  formatters in there to effective register them.

* Added an ``escapenl`` formatter (nl=newline) that escapes HTML and
  turns newlines into ``<br>``.

* When ``not_empty=False``, empty is assumed to be allowed.  Thus